[gd_scene load_steps=5 format=3 uid="uid://dmiy076xowe62"]

[ext_resource type="Script" path="res://menu real.gd" id="1_spy8t"]
[ext_resource type="Texture2D" uid="uid://c8a30o7nhnqs1" path="res://Graphics/Company_Menu/Buttons/expand _button.png" id="2_wn0vy"]
[ext_resource type="Texture2D" uid="uid://cj8unfw227bs" path="res://Graphics/Company_Menu/Buttons/background.png" id="3_aasjj"]
[ext_resource type="PackedScene" uid="uid://idqj6fm163n0" path="res://Scenes/kami_scenes/kami_bar.tscn" id="3_bfqqr"]

[node name="menu real" type="Node2D"]
position = Vector2(589, 647)
script = ExtResource("1_spy8t")
max_length = 300

[node name="top_button" type="TextureButton" parent="."]
offset_left = -92.0
offset_top = -49.0
offset_right = 95.0
offset_bottom = 14.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(93, 31.5)
texture_normal = ExtResource("2_wn0vy")

[node name="ColorRect" type="TextureRect" parent="."]
offset_left = -586.0
offset_right = 564.0
offset_bottom = 400.0
texture = ExtResource("3_aasjj")

[node name="Rooms" type="VBoxContainer" parent="."]
offset_left = -287.0
offset_right = 313.0
offset_bottom = 308.0
size_flags_horizontal = 11
size_flags_vertical = 0

[node name="Room" parent="Rooms" instance=ExtResource("3_bfqqr")]
layout_mode = 2
size_flags_vertical = 4

[node name="Room2" parent="Rooms" instance=ExtResource("3_bfqqr")]
layout_mode = 2
size_flags_vertical = 4

[node name="Room3" parent="Rooms" instance=ExtResource("3_bfqqr")]
layout_mode = 2
size_flags_vertical = 4

[node name="Side_menu" type="Node2D" parent="."]
position = Vector2(-784, 2)

[node name="ColorRect" type="ColorRect" parent="Side_menu"]
offset_left = -206.0
offset_top = 4.0
offset_right = 194.0
offset_bottom = 304.0
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="side_button" type="TextureButton" parent="Side_menu"]
offset_left = 164.0
offset_top = 117.0
offset_right = 351.0
offset_bottom = 180.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_wn0vy")

[connection signal="pressed" from="top_button" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Side_menu/side_button" to="." method="_on_side_button_pressed"]
